workspace-sf/force-app/main/default/objects/GarantiaSeguradoOrcamento__c/GarantiaSeguradoOrcamento__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as garantias do segurado do orçamento</description>
    <label>Garantia do segurado do orçamento</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantias do segurado do orçamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>