workspace-sf/force-app/main/default/objects/GarantiaSeguradoOrcamento__c/fields/Limite_de_Uso__c.field-meta.xml
<CustomField>
    <fullName>Limite_de_Uso__c</fullName>
    <description>PLV 4620</description>
    <label>Limite de Uso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>