workspace-sf/force-app/main/default/objects/GarantiaSeguradoOrcamento__c/fields/NumeroSerie__c.field-meta.xml
<CustomField>
    <fullName>NumeroSerie__c</fullName>
    <label>Número de série</label>
    <length>255</length>
    <type>Text</type>
</CustomField>