workspace-sf/force-app/main/default/objects/GarantiaSeguradoOrcamento__c/fields/SeguradoOrcamento__c.field-meta.xml
<CustomField>
    <fullName>SeguradoOrcamento__c</fullName>
    <label>Segurado do orçamento</label>
    <referenceTo>SeguradoOrcamento__c</referenceTo>
    <relationshipLabel>Garantias do segurado do orçamento</relationshipLabel>
    <relationshipName>GarantiasSeguradoOrcamento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>