workspace-sf/force-app/main/default/objects/GarantiaSeguradoOrcamento__c/fields/TaxaAnual__c.field-meta.xml
<CustomField>
    <fullName>TaxaAnual__c</fullName>
    <label>Taxa anual</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>