workspace-sf/force-app/main/default/objects/GarantiaSeguradoOrcamento__c/fields/TipoCapitalProduto__c.field-meta.xml
<CustomField>
    <fullName>TipoCapitalProduto__c</fullName>
    <formula>IF(INCLUDES( GarantiaProduto__r.TipoCapital__c , &quot;Capital global&quot;), &quot;Capital global &quot;,
IF(INCLUDES( GarantiaProduto__r.TipoCapital__c , &quot;Capital uniforme&quot;), &quot;Capital uniforme &quot;,
IF(INCLUDES( GarantiaProduto__r.TipoCapital__c , &quot;Escalonado por cargo&quot;), &quot;Escalonado por cargo &quot;,
IF(INCLUDES( GarantiaProduto__r.TipoCapital__c , &quot;Escalonado por faixa salarial&quot;), &quot;Escalonado por faixa salarial &quot;,
IF(INCLUDES( GarantiaProduto__r.TipoCapital__c , &quot;Livre escolha de capital&quot;), &quot;Livre escolha de capital &quot;,
IF(INCLUDES( GarantiaProduto__r.TipoCapital__c , &quot;Múltiplo por prêmio pago&quot;), &quot;Múltiplo por prêmio pago &quot;,
IF(INCLUDES( GarantiaProduto__r.TipoCapital__c , &quot;Múltiplo salarial&quot;), &quot;Múltiplo salarial &quot;, NULL)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Capital</label>
    <type>Text</type>
</CustomField>