workspace-sf/force-app/main/default/objects/GarantiaSeguradoOrcamento__c/validationRules/BloquearPreenchimentoCampos.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearPreenchimentoCampos</fullName>
    <active>true</active>
    <description>Edições e adições de novos dados bloqueados para orçamentos em fase &quot;Contratado&quot;</description>
    <errorConditionFormula>AND(ISPICKVAL( SeguradoOrcamento__r.GrupoOrcamento__r.ContratanteOrcamento__r.Orcamento__r.StageName , &quot;Contratado&quot;),
    $Profile.Name  &lt;&gt;  &quot;Administrador do sistema&quot;)</errorConditionFormula>
    <errorMessage>Edições de campos e adições de novos dados não são permitidas para Orçamentos em fase &quot;Contratado&quot;</errorMessage>
</ValidationRule>